fix sticky scrolling on safari

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -377,7 +377,7 @@ overflow-x: hidden;
 }
 
 .detail-section {
-    overflow: auto;
+    overflow: hidden;
 }
 
 .detail-section__description {
@@ -593,7 +593,7 @@ overflow-x: hidden;
 
 .grow {
   -moz-transition: all .3s;
-  -webkit-transition: all cubic-bezier(.175,.885,.32,1.275) 300ms;    
+  -webkit-transition: all cubic-bezier(.175,.885,.32,1.275) 300ms;
   background-position: center center;
   background-size: 103%;
 }
@@ -628,7 +628,7 @@ overflow-x: hidden;
 
 .footerText p{
     color: #a5a5a5
-    
+
 }
 
 
@@ -694,7 +694,7 @@ overflow-x: hidden;
     list-style: none;
     align-content:center;
     font-size: .9em
-    
+
 
 
 }
